# mediatpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Pipfile  README.md  pyproject.toml  requirements-codex.txt
.github/workflows/: python-publish.yml
docs/: conf.py  dependency_injection.rst  getting_started.rst  index.rst  mediatpy.rst  modules.rst  notifications.rst  pipeline.rst  repr.rst  requirements.txt
src/mediator/: __init__.py
src/mediatpy/: __init__.py
tests/: create_mediator.py  my_notification.py  my_request.py  test_mediator.py  test_mediator_decorators.py  test_mediator_request_special_cases.py
tests/test_data/: create_mediator.py  my_notification.py  my_request.py  my_response.py
