[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.flake8]
max-line-length = 120
max-doc-length = 140
use_class_attributes_order_strict_mode = true

[tool.mypy]
show_error_codes = true
pretty = true
show_error_context = true
show_column_numbers = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "assertpy"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src/"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pass"]

[tool.poetry]
name = "mediatpy"
version = "0.2.0"
description = "Mediator implementation in Python"
authors = ["Sergio León <panicoenlaxbox@gmail.com>"]
readme = "README.md"
repository = "https://github.com/panicoenlaxbox/mediatpy"
documentation = "https://mediatpy.readthedocs.io/en/latest/"
keywords = ["mediator"]
packages = [{ include = "mediatpy", from = "src" }]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
assertpy = "^1.1"
pre-commit = "^2.20.0"
flake8-class-attributes-order = "^0.1.3"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
flake8-pyproject = "^1.1.0.post0"
bandit = "^1.7.4"
sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.5"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
